# ComputerArchitectureLabCmake

./: CMakeLists.txt  calculator.h  main.cpp
